# bacup

./: .gitignore  .gitmodules  README.md  pyproject.toml
bacup/py_bacup_lib/: Cargo.toml  pyproject.toml
bacup/py_bacup_lib/native/bacup_lib_native/: Cargo.toml
bacup/py_bacup_lib/native/bacup_lib_native/src/: lib.rs
bacup/py_bacup_lib/native/conversion/: Cargo.toml  build.rs
bacup/py_bacup_lib/native/conversion/src/: collision_donor.rs  drop_trace.rs  embedded.rs  errors.rs  filesystem.rs  fo76_navmesh.rs  fo76_rdot.rs  formkey_mapper.rs  full_plugin.rs  ids.rs  legacy_fallout_navmesh.rs  legacy_pack_preflight.rs  lib.rs  material_source_overrides.rs  materialized_npc_facegen.rs  modt_compute.rs  modt_manifest.rs  plugin_header.rs  projected_placed.rs  python_api.rs  record.rs  relocation.rs  run.rs  schema.rs  session.rs  skyrim_navmesh.rs  source_read.rs  struct_codec.rs  struct_relayout.rs  sym.rs  target_assets.rs  target_normalize.rs  target_write.rs
bacup/py_bacup_lib/native/conversion/tests/: formkey_mapper_generated_reservations.rs
bacup/py_bacup_lib/python/bacup_lib/: __init__.py  asset_paths.py  attach_point_keyword_naming.py  atx_walker.py  base_asset_dedupe.py  esp_native_runtime.py  family_map.py  fo76_sources.py  generated_ids.py  imod_to_misc.py  input_preflight.py  install_debug.py  install_targets.py  invariants.py  lod_settings.py  memory_report.py  models.py  native_maps.py  native_runtime.py  omod_filter.py  omod_property_codec.py  orchestrator.py  paths.py  regen_pipeline.py  runner.py  source_pairs.py  target_assets.py  target_masters.py  target_preflight.py  timing_report.py  upgrade_manifest.py  version_stamp.py  weapon_attachment_surgery.py  weapon_attachment_synth.py  weapon_property_decoder.py  weapon_report.py  worker_advice.py  worldspace_services.py  yaml_helpers.py
bacup/py_bacup_lib/python/bacup_lib/animation/: __init__.py  event_mapper.py  lookup.py  phases.py  weapon_anim_data_synth.py  weapon_family_classifier.py  weapon_family_table.yaml  weapon_overlay_synth.py
bacup/py_bacup_lib/python/bacup_lib/behavior/: __init__.py  clip_roles.py  deps.py  driver_synth.py  drivers.yaml  havok_worker.py  phases.py  scaffold.py  template_renderer.py  translator.py
bacup/py_bacup_lib/python/bacup_lib/formkey/: __init__.py  formkey_mapper.py
bacup/py_bacup_lib/python/bacup_lib/nif/: __init__.py  lookup.py
bacup/py_bacup_lib/python/bacup_lib/pipeline/: __init__.py  _shim.py  animations.py  btos.py  drivers.py  havok.py  materials.py  nifs.py  sounds.py  terrain.py  textures.py  translate.py
bacup/py_bacup_lib/python/bacup_lib/record/: __init__.py  canonical_keys.py  extractors.py  fo76_condition_functions.yaml  material_source_overrides.yaml  phases.py  schema_surface.py  translation_map_data.py
bacup/py_bacup_lib/python/bacup_lib/run/: __init__.py  run_handle.py
bacup/py_bacup_lib/python/bacup_lib/script_patches/: ACDuctEnterFXScript.psc  ATX_BloodTransfusionPumpScript.psc  ATX_FortuneTellerMachineScript.psc  ATX_NukaMysteryMachine.psc  ATX_VaultBoyBalloonStationScript.psc  AddSpellOnFurnitureEnter.psc  AliasSetStageOnItemEquipped.psc  ArcadeBottleBlasterTarget.psc  ArcadeNukaZapperRace.psc  ArcadeNukaZapperRaceRocket.psc  ArcadeNukaZapperRaceTarget.psc  ArcadeShootingGallery.psc  ArcadeShootingGalleryTarget.psc  ArcadeTicketDispenser.psc  ArcadeTokenDispenserScript.psc  ArcadeTokenSlot.psc  ArcadeWhackAMole.psc  ArcadeWhackAMoleTarget.psc  AudioActorPlaySound.psc  BoS01PerPlayerSetStageTriggerScript.psc  BoS01ToggleButtonScript.psc  BoS01TrainingCampNoteScript.psc  BoS02DMVTicketPrinterScript.psc  BoS02TriggerScript.psc  BoSActivateMessageScript.psc  BoSSetStageTriggerScript.psc  BoSStartQuestTriggerScript.psc  BoSz04_CentrifugeScript.psc  Burn_ArmoredDeathclawFrenzy.psc  Burn_Bounty_CustomRadBurst.psc  Burn_HandlerCreateDeathclawScript.psc  COMP_AllyPermanentSpawnMarkerScript.psc  COMP_AllySpawnMarkerScript.psc  COMP_RQ_SpecificAliasesScript.psc  CampObjectScript.psc  CharGenStartTriggerScript.psc  CoolingTowerHazardTriggerScript.psc  CreatureCombatStyle.psc  CreatureUltraciteAbominationScript.psc  DLC03HermitCrabSpawnChildScript.psc  (+336 more)
bacup/py_bacup_lib/python/bacup_lib/terrain/: __init__.py  fo76_btd.py  xse_shell.py
bacup/py_bacup_lib/python/bacup_lib/tests/: conftest.py  fo76_synthesizer.py  helpers.py  hkx_comparator.py  record_comparator.py  test_activator_enable_disable_toggle_linked_ref_script_patches.py  test_animation_lookup.py  test_apply_asset_prefix.py  test_apply_registry_mappings_native.py  test_arcade_nuka_cade_misc_script_patches.py  test_archetype_template_loading.py  test_asset_paths.py  test_asset_phase_params.py  test_asset_progress_events.py  test_atx_skin_discovery.py  test_audio_extractors.py  test_ba2_target_option.py  test_base_asset_dedupe.py  test_brotherhood_of_steel_misc_script_patches.py  test_burn_bountygiver_onconnect_script_patch.py  test_burning_springs_misc_script_patches.py  test_camp_object_script_patch.py  test_cb04_add_faction_perk_script_patch.py  test_cell_phase_gating.py  test_character_anim_injection.py  test_character_rig_path_fix.py  test_cleanup_reachability.py  test_clip_roles.py  test_community_deposit_script_patches.py  test_companions_allies_misc_script_patches.py  test_conversion_handle_ownership.py  test_crane_cache_access_script_patch.py  test_crane_terminal_script_patches.py  test_creatures_bosslootdrop_misc_script_patches.py  test_creatures_default_creaturevariantscript_misc_script_patches.py  test_creatures_default_glowinglootdrop_nondefect.py  test_creatures_default_selfdestructscript_parent_script_patch.py  test_creatures_default_setonfirescript_non_defect.py  test_creatures_festivegiftadditem_misc_script_patches.py  test_creatures_mrhandyselfdestructscript_patch.py  (+199 more)
bacup/py_bacup_lib/python/bacup_lib/texture/: __init__.py  batch.py  compression.py  deps.py  native.py
bacup/py_bacup_lib/python/bacup_lib/workflows/: __init__.py  asset_phases.py  (+1 more)
bacup/py_bacup_lib/python/bacup_ui/: __init__.py  __main__.py  crash_diagnostics.py  setup.py  storage_cleanup.py  variant.py
(+1232 files in other folders)
