[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bacup-lib"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.0",
    "py-creation-lib",
]

[tool.maturin]
manifest-path = "native/bacup_lib_native/Cargo.toml"
module-name = "bacup_lib._native"
python-source = "python"
python-packages = ["bacup_lib", "bacup_ui"]
profile = "release"
include = [
    { path = "python/bacup_lib/animation/*.yaml", format = "wheel" },
    { path = "python/bacup_lib/behavior/*.yaml", format = "wheel" },
    { path = "python/bacup_lib/behavior/templates/*.yaml", format = "wheel" },
    { path = "python/bacup_lib/record/*.yaml", format = "wheel" },
    { path = "python/bacup_lib/record/whitelists/**", format = "wheel" },
    { path = "python/bacup_lib/resources/**/*.yaml", format = "wheel" },
    { path = "python/bacup_lib/script_patches/**/*.psc", format = "wheel" },
    { path = "native/conversion/src/embedded/*.yaml", format = "wheel" },
    { path = "native/conversion/src/embedded/translation_maps/*.yaml", format = "wheel" },
    { path = "native/conversion/src/embedded/whitelists/*.yaml", format = "wheel" },
    { path = "native/conversion/src/fnv_legacy_scripting/data/*.yaml", format = "wheel" },
    { path = "native/conversion/src/phase/resources/face/*.yaml", format = "wheel" },
    { path = "native/conversion/src/phase/resources/face/*.npz", format = "wheel" },
]
